--- a/TileMapEditor.vcxproj.filters
+++ b/TileMapEditor.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\TMGui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\SpriteAtlas.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Camera.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\SpriteAtlas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
